# teknofest_maden_teknolojileri

./: CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  package.xml  requirements.txt  setup.py
.github/workflows/: ros2-ci.yml
docs/raporlar/: metodoloji_taslak.md
launch/: deepmine_system_launch.py
src/ai_models/: reserve_predictor.py
src/autonomous_nav/: navigation_node.cpp
src/sensor_hub/: alert_node.py  isg_monitor.py
